name:          sd-mechanism
version:       0.1.0.0
synopsis:      Library implementing Snowdrift.coop's pledges and accounts.
description:   Please see README.md
homepage:      https://git.gnu.io/snowdrift/sd-mechanism
license:       AGPL-3
license-file:  LICENSE.md
author:        Bryan Richter and Snowdrift.coop
maintainer:    dev@lists.snowdrift.coop
bug-reports:   dev@lists.snowdrift.coop
category:      Finance, Crowdfunding
build-type:    Simple
cabal-version: >=1.10
extra-source-files:
  LICENSE.md
  README.md

source-repository head
    type:     git
    location: https://git.gnu.io/snowdrift/sd-mechanism.git

library
    hs-source-dirs:   src
    ghc-options:      -Wall
    default-language: Haskell2010
    default-extensions:
        FlexibleContexts
        GADTs
        GeneralizedNewtypeDeriving
        LambdaCase
        MultiParamTypeClasses
        QuasiQuotes
        RankNTypes
        TemplateHaskell
        TypeFamilies
    build-depends:    
        base >=4.7 && <5
      , errors >=2.1.1                                  
      , mtl >=2.2.1                                     
      , persistent >=2.2.4                              
      , persistent-template >=2.1.5                     
      , text >=1.2.2.0                                  
      , transformers >=0.4.2.0                          
    exposed-modules:  
        Snowdrift.Mechanism
        Snowdrift.Mechanism.Persist
        Snowdrift.Mechanism.Types

test-suite test
    type:             exitcode-stdio-1.0
    default-language: Haskell2010
    hs-source-dirs:   test
    ghc-options:      -Wall -threaded -with-rtsopts=-N
    main-is:          test.hs
    other-modules:    
        Harness
        Test.Tasty.Persist.Postgres                
    build-depends:  
        base ==4.*
      , bytestring >=0.10.6.0                      
      , monad-logger >=0.3.17                      
      , mtl >=2.2.1                                
      , persistent >=2.2.4                         
      , persistent-postgresql >=2.2.2              
      , postgresql-simple >=0.5.1.2                
      , random >=1.1                               
      , resource-pool >=0.2.3.2                    
      , sd-mechanism                                
      , tasty >=0.10                               
      , tasty-hunit                                 
      , transformers >=0.4.2.0                     
